--- a/game-of-life/src/index.css
+++ b/game-of-life/src/index.css
@@ -1,10 +1,11 @@
 body {
-  background-color: #336;
+  background-image: url('./ep_naturalblack.png');
+  background-size: auto;
 }
 
 .box {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid #666;
   width: 15px;
   height: 15px;
   margin-left: -1px;
@@ -33,8 +34,8 @@ body {
   width: 150px;
   line-height: 0;
   margin: auto;
-  -moz-box-shadow: 0x 0px 20px white;
-  -webkit-box-shadow: 0x 0px 20px white;
+  -moz-box-shadow: 0x 0px 20px #FFF;
+  -webkit-box-shadow: 0x 0px 20px #FFF;
   box-shadow: 0px 0px 20px #FFF;
   margin-top: 20px;
 }
@@ -47,6 +48,13 @@ h1, h2, h3, h4 {
   margin-top: 10px;
 }
 
+h1 {
+  font-size: 48px;
+  font-family: Impact;
+  margin: 30px auto;
+}
+
 h4 {
-  margin-top: 0px;
+  font-size: 26px;
+  margin-top: 20px;
 }
